added about serction and some pag styles

--- a/index.html
+++ b/index.html
@@ -22,16 +22,132 @@
 
 		<!-- Jumbotron -->
 		<section class="jumbotron">
-			<img src="images/vanillaRealtyDark.png" alt="Logo">
-			<header>Vanilla Realty "You Found it"</header>
+			<div class="container">
+				<div class="navbar-header">
+					<a href="" class="navbar-brand">
+						<img src="images/logo-gray.svg" alt="Logo">
+					</a>
+				</div>
+				<header>
+					<h1>Vanilla Realty "You Found it"</h1>
+				</header>
+			</div>
 		</section>
 
 		<!-- Services -->
 		<section class="services">
-			<section class="row">
-			
-			</section>
-		</section>
-	</body>
+			<div class="container">
+				<div class="row">
+					<header class="section-headline">
+						<h2>Services</h2>
+					</header>
+					<div class="col-sm-4">
+						<div class="services-image">
+							<i class="fa fa-home" aria-hidden="true"></i>
+						</div>
+						<div class="services-text">
+							<header>
+								<h3>Property Sales</h3>
+							</header>
+							<div class="services-text-body">
+								<p>
+								Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. </p>
+							</div>
+						</div>
+					</div>
 
- </html>
+
+					<div class="col-sm-4">
+						<div class="services-image">
+							<i class="fa fa-home" aria-hidden="true"></i>
+
+						</div>
+						<div class="services-text">
+							<header>
+								<h3>Property Letting</h3>
+							</header>
+							<div class="services-text-body">
+								<p>We offer our esteemed clients a one stop agency for all property rental needs. Our strong and dynamic team is dedicated to recommend properties and areas that would specifically match our clients’ needs.</p>
+							</div>
+						</div>
+						<div class="verticalLine"></div>
+					</div>
+
+					<div class="col-sm-4">
+						<div class="services-image">
+							<i class="fa fa-home" aria-hidden="true"></i>
+
+						</div>
+						<div class="services-text">
+							<header>
+								<h3>Property Management</h3>
+							</header>
+							<div class="verticalLine"></div>
+							<div class="services-text-body">
+								<p>We pride in excellence of providing management and administration services to your property following a value oriented approach. Apart from classical administrative and technical management work, we deploy world class technology and software to offer various additional value services in order to protect the quality of your real estate investment.
+								</p>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- About -->
+		<section class="about">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-12">
+						<header class="section-headline">
+							<h2>About</h2>
+						</header>
+						<p>Vanilla Realtor offers a wide range of fully integrated real estate services through both commercial and residential properties to a diverse clientèle. Effective marketing tools and strategies deploying state of art tools and technology to delight our customers, established through extensive research of the real estate market and customized. All our services are provided by a team of property specialists who have an in-depth knowledge and expertise in the areas they specialize in the industry.
+						</p>
+					</div>
+				</div>
+
+				<!-- Mission, Vision & Core Values -->
+				<div class="mv row">
+					<div class="col-sm-6">
+						<div class="mv-heading">
+							<header>
+								<h2>Our Vision</h2>
+							</header>
+							<div class="mv-text">
+								<p>To become the recognized leader in providing integrated real estate products and services to every client we serve. </p>
+							</div>
+						</div>
+
+						<div class="mv-heading">
+							<header>
+								<h2 class="mission">Our Mission</h2>
+							</header>
+							<div class="mv-text">
+								<p>Providing the finest integrated real estate solutions by intersecting technology, design excellence and  market intelligence to deliver outstanding investment opportunities for our clients. </p>
+							</div>
+						</div>
+					</div>
+
+					<div class="col-sm-6">
+						<div class="core-values">
+							<header>
+								<h2>Core Values</h2>
+							</header>
+							<div class="core-values-text">
+								<ul>
+									<li> Integrity We deliver on our commitments while maintaining the highest moral and professional standards at all time.</li>
+									<li>Teamwork We align personal and departmental agendas to achieve overall company success</li>
+									<li>passion we works with passion towards helping our clients achieve their goals through a well coordinated end to end strategy.</li>
+									<li>Dedication We make it our personal responsibility to carry out our Mission to the best of our knowledge</li>
+									<li>Accountability We are committed to performance, results, and achievement of our measurable goals</li>
+									<li> Excellence We provide professionalism and exceptional service, continuing as front runners in innovation through technology and best practices in the real estate industry</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<!-- Mission, Vision & Core Values -->
