added image and svg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<a href="" class="navbar-brand">
-						<img src="images/logo-gray.svg" alt="Logo">
+						<img src="images/vanilla.svg" alt="Logo">
 					</a>
 				</div>
 				<header>
