--- a/index.html
+++ b/index.html
@@ -22,77 +22,29 @@
 
 		<!-- Jumbotron -->
 		<section class="jumbotron">
-			<div class="container">
-				<div class="navbar-header">
+			<nav class="navbar navbar-default">
+				<div class="container-fluid">
+					<div class="navbar-header">
 					<a href="" class="navbar-brand">
-						<img src="images/vanilla.svg" alt="Logo">
+						<img src="images/vanillawhite.svg" alt="Logo">
 					</a>
-				</div>
+					</div>
+				</div>	
+			</nav>
+				
 				<header>
-					<h1>Vanilla Realty "You Found it"</h1>
+					<h1>YOU FOUND IT</h1>
+					<p>Search for a trusted and reliable property agent to be your partner </p>
+					<p class="header-phone"> <i class="fa fa-phone" aria-hidden="true"> </i>
+ +254 20 6009998</p>
+
 				</header>
-			</div>
-		</section>
-
-		<!-- Services -->
-		<section class="services">
-			<div class="container">
-				<div class="row">
-					<header class="section-headline">
-						<h2>Services</h2>
-					</header>
-					<div class="col-sm-4">
-						<div class="services-image">
-							<i class="fa fa-home" aria-hidden="true"></i>
-						</div>
-						<div class="services-text">
-							<header>
-								<h3>Property Sales</h3>
-							</header>
-							<div class="services-text-body">
-								<p>
-								Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. </p>
-							</div>
-						</div>
-					</div>
-
-
-					<div class="col-sm-4">
-						<div class="services-image">
-							<i class="fa fa-home" aria-hidden="true"></i>
-
-						</div>
-						<div class="services-text">
-							<header>
-								<h3>Property Letting</h3>
-							</header>
-							<div class="services-text-body">
-								<p>We offer our esteemed clients a one stop agency for all property rental needs. Our strong and dynamic team is dedicated to recommend properties and areas that would specifically match our clients’ needs.</p>
-							</div>
-						</div>
-						<div class="verticalLine"></div>
-					</div>
-
-					<div class="col-sm-4">
-						<div class="services-image">
-							<i class="fa fa-home" aria-hidden="true"></i>
-
-						</div>
-						<div class="services-text">
-							<header>
-								<h3>Property Management</h3>
-							</header>
-							<div class="verticalLine"></div>
-							<div class="services-text-body">
-								<p>We pride in excellence of providing management and administration services to your property following a value oriented approach. Apart from classical administrative and technical management work, we deploy world class technology and software to offer various additional value services in order to protect the quality of your real estate investment.
-								</p>
-							</div>
-						</div>
-
-					</div>
+				<div class="more-arrow">
+					<i class="fa fa-angle-down" aria-hidden="true"></i>
 				</div>
-			</div>
 		</section>
+
+		
 
 		<!-- About -->
 		<section class="about">
@@ -100,7 +52,9 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<header class="section-headline">
-							<h2>About</h2>
+							<h2>About
+								<div class="headline-border-bottom"><hr></div>
+							</h2>
 						</header>
 						<p>Vanilla Realtor offers a wide range of fully integrated real estate services through both commercial and residential properties to a diverse clientèle. Effective marketing tools and strategies deploying state of art tools and technology to delight our customers, established through extensive research of the real estate market and customized. All our services are provided by a team of property specialists who have an in-depth knowledge and expertise in the areas they specialize in the industry.
 						</p>
@@ -108,7 +62,7 @@
 				</div>
 
 				<!-- Mission, Vision & Core Values -->
-				<div class="mv row">
+				<!-- <div class="mv row">
 					<div class="col-sm-6">
 						<div class="mv-heading">
 							<header>
@@ -146,8 +100,164 @@
 							</div>
 						</div>
 					</div>
+				</div> -->
+			</div>
+		</section>
+
+		<section class="test">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="property-sales">
+						<div class="col-sm-3">
+								<div>
+									mmmmmm
+								</div>
+						</div>
+						<div class="col-sm-3">
+							<div>
+									mmmmmm
+								</div>
+						</div>
+					</div>
+
+					<div class="property-letting">
+						<div class="col-sm-3">
+								<div>
+									mmmmmm
+								</div>
+						</div>
+						<div class="col-sm-3">
+								<div>
+									mmmmmm
+								</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>
+
+		<!-- Services -->
+		<section class="services">
+			<div class="container">
+				<div class="row">
+					<header class="section-headline">
+						<h2>Services
+							<div class="headline-border-bottom"><hr></div>
+						</h2>
+					</header>
+					<div class="col-sm-4">
+						<div class="services-card">
+							<div class="services-image">
+								<i class="fa fa-home" aria-hidden="true"></i>
+							</div>
+							<div class="services-text">
+								<header>
+									<h3>Property Sales</h3>
+								</header>
+								<div class="services-text-body">
+									<p>
+									Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. </p>
+								</div>
+							</div>
+							<div class="services-border-bottom"><hr></div>
+						</div>
+					</div>
+
+
+					<div class="col-sm-4">
+						<div class="services-card">
+							<div class="services-image">
+								<i class="fa fa-home" aria-hidden="true"></i>
+
+							</div>
+							<div class="services-text">
+								<header>
+									<h3>Property Letting</h3>
+								</header>
+								<div class="services-text-body">
+									<p>We offer our esteemed clients a one stop agency for all property rental needs. Our strong and dynamic team is dedicated to recommend properties and areas that would specifically match our clients’ needs.</p>
+								</div>
+							</div>
+							<div class="services-border-bottom""><hr></div>
+						</div>
+							
+						<!-- div class="verticalLine"></div> -->
+					</div>
+
+					<div class="col-sm-4">
+						<div class="services-card">
+							<div class="services-image">
+								<i class="fa fa-home" aria-hidden="true"></i>
+							</div>
+							<div class="services-text">
+								<header>
+									<h3>Property Management</h3>
+								</header>
+								<!-- <div class="verticalLine"></div> -->
+								<div class="services-text-body">
+									<p>We pride in excellence of providing management and administration services to your property following a value oriented approach. Apart from classical administrative and technical management work, we deploy world class technology and software to offer various additional value services in order to protect the quality of your real estate investment.
+									</p>
+								</div>
+							</div>
+							<div class="services-border-bottom"><hr></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="contacts">
+			<div class="container">
+				<div class="row">
+					<header class="section-headline">
+						<h2>Get In Touch</h2>
+					</header>
+						<div class="col-sm-4">
+							<div class="contacts-card">
+								<header>
+									<h3>Phone</h3>
+								</header>
+								<div class="contacts-body">
+									<ul>
+										<li>+254 20 6009998</li>
+										<li>+254 20 6009999</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="contacts-card">
+								<header>
+									<h3>Email</h3>
+								</header>
+								<div class="contacts-body">
+									<ul>
+										<li>info@intellisoftplus.com</li>
+										<li>info@intellisoftplus.com</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<div class="contacts-card">
+								<header>
+									<h3>Address</h3>
+								</header>
+								<div class="contacts-body">
+									<ul>
+										<li>Lowerhill Duplex, Suite 18</li>
+										<li>Upperhill Road, Upperhill</li>
+										<li>Nairobi, Kenya</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+				</div>
+			</div>
+		</section>
+
+	</body>
+</html>
+
 
 		<!-- Mission, Vision & Core Values -->
