new structure for services

--- a/index.html
+++ b/index.html
@@ -105,39 +105,6 @@
 		</section>
 
 		<section class="test">
-			<div class="container-fluid">
-				<div class="row">
-					<div class="property-sales">
-						<div class="col-sm-3">
-								<div>
-									mmmmmm
-								</div>
-						</div>
-						<div class="col-sm-3">
-							<div>
-									mmmmmm
-								</div>
-						</div>
-					</div>
-
-					<div class="property-letting">
-						<div class="col-sm-3">
-								<div>
-									mmmmmm
-								</div>
-						</div>
-						<div class="col-sm-3">
-								<div>
-									mmmmmm
-								</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Services -->
-		<section class="services">
 			<div class="container">
 				<div class="row">
 					<header class="section-headline">
@@ -145,6 +112,40 @@
 							<div class="headline-border-bottom"><hr></div>
 						</h2>
 					</header>
+
+					<div class="col-sm-6">
+						<div class="property-sales-image"></div>
+						<div class="property-sales-text">
+							<header>
+							<h3>Property Sales</h3>
+						</header>
+						<p>
+							Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. 
+						</p>
+						</div>
+					</div>
+
+					<div class="col-sm-6">
+						<div class="property-sales-image"></div>
+						<div class="property-sales-text">
+							<header>
+							<h3>Property Sales</h3>
+						</header>
+						<p>
+							Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. 
+						</p>
+						</div>
+					</div>
+		
+				</div>
+			</div>	
+		</section>
+
+		<!-- Services -->
+	<!-- 	<section class="services">
+			<div class="container">
+				<div class="row">
+					
 					<div class="col-sm-4">
 						<div class="services-card">
 							<div class="services-image">
@@ -181,7 +182,6 @@
 							<div class="services-border-bottom""><hr></div>
 						</div>
 							
-						<!-- div class="verticalLine"></div> -->
 					</div>
 
 					<div class="col-sm-4">
@@ -193,7 +193,6 @@
 								<header>
 									<h3>Property Management</h3>
 								</header>
-								<!-- <div class="verticalLine"></div> -->
 								<div class="services-text-body">
 									<p>We pride in excellence of providing management and administration services to your property following a value oriented approach. Apart from classical administrative and technical management work, we deploy world class technology and software to offer various additional value services in order to protect the quality of your real estate investment.
 									</p>
@@ -204,7 +203,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
 		<section class="contacts">
 			<div class="container">
