changed contacts style

--- a/index.html
+++ b/index.html
@@ -126,17 +126,31 @@
 					</div>
 
 					<div class="col-sm-6">
-						<div class="property-sales-image"></div>
+						<div class="property-letting-image"></div>
 						<div class="property-sales-text">
 							<header>
-							<h3>Property Sales</h3>
+							<h3>Property Letting</h3>
 						</header>
 						<p>
-							Coupled with our technology prowess and unmatched expertise in digital marketing, We offer industry leading property marketing and acquisition services. Following our structured and simplified process we make it buying or selling property can be a complicated and overwhelming process. 
+							We offer our esteemed clients a one stop agency for all property rental needs. Our strong and dynamic team is dedicated to recommend properties and areas that would specifically match our clients’ needs. 
 						</p>
 						</div>
 					</div>
 		
+				</div>
+
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="property-management-image"></div>
+						<div class="property-sales-text">
+							<header>
+							<h3>Property Management</h3>
+						</header>
+						<p>
+							We offer our esteemed clients a one stop agency for all property rental needs. Our strong and dynamic team is dedicated to recommend properties and areas that would specifically match our clients’ needs. 
+						</p>
+						</div>
+					</div>
 				</div>
 			</div>	
 		</section>
@@ -209,7 +223,9 @@
 			<div class="container">
 				<div class="row">
 					<header class="section-headline">
-						<h2>Get In Touch</h2>
+						<h2>Get In Touch
+							<div class="headline-border-bottom"><hr></div>
+						</h2>
 					</header>
 						<div class="col-sm-4">
 							<div class="contacts-card">
