--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   	<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   	<![endif]-->
+
+  	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-85391723-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
  </head>
 	<body>
 
@@ -113,7 +124,7 @@
 						</h2>
 					</header>
 
-					<div class="col-sm-6">
+					<div class="services-column1 col-xs-12 col-sm-12 col-md-6">
 						<div class="property-sales-image"></div>
 						<div class="property-sales-text">
 							<header>
@@ -125,7 +136,7 @@
 						</div>
 					</div>
 
-					<div class="col-sm-6">
+					<div class="col-xs-12  col-sm-12 col-md-6">
 						<div class="property-letting-image"></div>
 						<div class="property-sales-text">
 							<header>
@@ -140,7 +151,7 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12">
+					<div class="col-xs-12  col-sm-12 col-md-6">
 						<div class="property-management-image"></div>
 						<div class="property-sales-text">
 							<header>
@@ -227,7 +238,7 @@
 							<div class="headline-border-bottom"><hr></div>
 						</h2>
 					</header>
-						<div class="col-sm-4">
+						<div class="col-xs-12  col-sm-4">
 							<div class="contacts-card">
 								<header>
 									<h3>Phone</h3>
@@ -240,7 +251,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-xs-12  col-sm-4">
 							<div class="contacts-card">
 								<header>
 									<h3>Email</h3>
@@ -253,7 +264,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-4">
+						<div class="col-xs-12 col-sm-4">
 							<div class="contacts-card">
 								<header>
 									<h3>Address</h3>
